--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-# 数据采集
+# Data Collection
 playwright>=1.40.0
 aiohttp>=3.9.0
 aiohttp[speedups]
@@ -6,18 +6,18 @@ httpx>=0.25.0
 beautifulsoup4>=4.12.0
 lxml>=5.0.0
 
-# 数据存储
+# Data Storage
 sqlalchemy>=2.0.0
 aiosqlite>=0.19.0
 duckdb>=0.10.0
 redis>=5.0.0
 
-# 数据处理
+# Data Processing
 pandas>=2.1.0
 numpy>=1.26.0
 pyarrow>=14.0.0
 
-# 机器学习
+# Machine Learning
 scikit-learn>=1.3.0
 torch>=2.1.0
 torch-geometric>=2.4.0
@@ -27,15 +27,15 @@ transformers>=4.36.0
 jieba>=0.42.1
 langdetect>=1.0.9
 
-# 图分析
+# Graph Analysis
 networkx>=3.2.0
 
-# 可视化
+# Visualization
 streamlit>=1.29.0
 pyecharts>=2.0.0
 plotly>=5.18.0
 
-# 工具
+# Tools
 python-dotenv>=1.0.0
 pydantic>=2.5.0
 pydantic-settings>=2.1.0
@@ -43,13 +43,13 @@ loguru>=0.7.0
 tqdm>=4.66.0
 click>=8.1.0
 
-# 报告生成
+# Report Generation
 jinja2>=3.1.0
 reportlab>=4.0.0
 openpyxl>=3.1.0
 apscheduler>=3.10.0
 
-# 测试
+# Testing
 pytest>=7.4.0
 pytest-asyncio>=0.21.0
 pytest-cov>=4.1.0
